syntax = "proto3";

package docket;

option go_package = "docket/proto/framework";

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

// PersistenceEntry is the envelope stored in the database/cache.
message PersistenceEntry {
  // The actual result of the step.
  // We use Any so we can store the specific output proto.
  google.protobuf.Any value = 1;

  // If the step failed, this contains the error message.
  string error = 2;

  // When this entry was created.
  google.protobuf.Timestamp created_at = 3;

  // When this entry expires.
  google.protobuf.Timestamp expires_at = 4;

  // Arbitrary metadata (tags).
  map<string, string> metadata = 5;
}

